Check on duplicate name for rename
Add check whether namespace and name already exist
when renaming a repository.